Improved login support.

--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -66,23 +66,27 @@
                         {% set google = appSettings.get('webportal','googleappid','') %}
                         {% set twitter = appSettings.get('webportal','twitterappid','') %}
                         {% set fsLogin = appSettings.get('webportal','allowlogincontacts','false') == 'true' %}
-                        {% if facebook %}
-                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
-                                <i class="fab fa-facebook fa-fw" aria-hidden="true"></i> facebook
-                            </a>
-                        {% endif %}
-                        {% if google %}
-                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google&return={{ fsc.url() }}" class="btn btn-block">
-                                <i class="fab fa-google fa-fw" aria-hidden="true"></i> google
-                            </a>
-                        {% endif %}
-                        {% if twitter %}
-                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter&return={{ fsc.url() }}" class="btn btn-block">
-                                <i class="fab fa-twitter fa-fw" aria-hidden="true"></i> twitter
-                            </a>
-                        {% endif %}
-                        {% if fsLogin and (facebook or google or twitter) %}
-                            <p class="form-input-hint">{{ i18n.trans('login-with-social-or-email') }}</p>
+                        {% if facebook or google or twitter %}
+                            <div class="btn-group btn-group-block">
+                                {% if facebook %}
+                                    <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
+                                        <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
+                                {% if google %}
+                                    <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google&return={{ fsc.url() }}" class="btn btn-block">
+                                        <i class="fab fa-google fa-fw" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
+                                {% if twitter %}
+                                    <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter&return={{ fsc.url() }}" class="btn btn-block">
+                                        <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
+                            </div>
+                            {% if fsLogin %}
+                                <p class="form-input-hint">{{ i18n.trans('login-with-social-or-email') }}</p>
+                            {% endif %}
                         {% endif %}
                         {% if fsLogin %}
                             <form action="{{ constant('FS_ROUTE') }}/HybridLogin?prov=fs" method="post" class="form">
@@ -91,7 +95,7 @@
                                         <span class="input-group-addon">
                                             <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
                                         </span>
-                                        <input type="text" name="fsContact" id="fsContact" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('email') }}" required="" autocomplete="off"/>
+                                        <input type="text" name="fsContact" id="fsContact" class="form-input" maxlength="50" placeholder="{{ i18n.trans('email') }}" required="true" autocomplete="off"/>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -99,17 +103,25 @@
                                         <span class="input-group-addon">
                                             <i class="fas fa-key fa-fw" aria-hidden="true"></i>
                                         </span>
-                                        <input type="password" name="fsContactPass" id="fsContactPass" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
-                                        <button type="submit" class="btn btn-primary input-group-btn">
-                                            <i class="fas fa-sign-in-alt fa-fw"></i>
-                                        </button>
+                                        <input type="password" name="fsContactPass" id="fsContactPass" class="form-input" maxlength="50" placeholder="{{ i18n.trans('password') }}"/>
                                     </div>
-                                    <p class="form-input-hint">{{ i18n.trans('webportal-forgotten-password') }}</p>
                                 </div>
+                                <div class="form-group">
+                                    <label class="form-switch">
+                                        <input type="checkbox" name="fsContactPassForgot" value="true"/>
+                                        <i class="form-icon"></i>
+                                        {{ i18n.trans('webportal-forgotten-password') }}
+                                    </label>
+                                </div>
+                                <button type="submit" class="btn btn-block btn-primary">
+                                    {{ i18n.trans('login') }}
+                                </button>
                                 {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
-                                    <a class="btn btn-block btn-success" href="{{ constant('FS_ROUTE') }}/PortalRegisterMe">
-                                        <i class="fas fa-edit fa-fw"></i> {{ i18n.trans('register-me') }}
-                                    </a>
+                                    <div class="mt-2">
+                                        <a class="btn btn-block btn-success" href="{{ constant('FS_ROUTE') }}/PortalRegisterMe">
+                                            {{ i18n.trans('register-me') }}
+                                        </a>
+                                    </div>
                                 {% endif %}
                             </form>
                         {% endif %}
@@ -232,8 +244,8 @@
                         </li>
                     {% endfor %}
                     <li class="divider">
-                {% else %}
-                    {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? 'active' : '' %}
+                    {% else %}
+                        {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? 'active' : '' %}
                     <li class="menu-item">
                         <a class="{{ activeClass }}" href="{{ menuItem.url('public') | raw }}">
                             <i class="{{ menuItem.icon }} fa-fw" aria-hidden="true"></i> {{ menuItem.shorttitle }}
