--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -40,7 +40,7 @@
         {% block navbar %}
             <div class="navbar navbar-top">
                 <div class="navbar-section show-sm">
-                    {{ Macros.TopMenuSmall(fsc, i18n) }}
+                    {{ Macros.TopMenuSmall(fsc, i18n, webTitle) }}
                 </div>
                 <div class="navbar-section hide-sm">
                     <img src="{{ asset('Dinamic/Assets/Images/logo.png') }}" width="30" height="30" alt="{{ webTitle }}" />
