--- a/View/WebSearch.html.twig
+++ b/View/WebSearch.html.twig
@@ -7,11 +7,10 @@
 
 {% block body %}
     <div class="body-section">
-        <br/>
         <div class="container grid-lg">
             <div class="columns">
                 <div class="column col-12">
-                    <h1 class="text-center">{{ i18n.trans('search') }}</h1>
+                    <h1 class="h3 text-center">{{ i18n.trans('search') }}</h1>
                     <form id="searchForm" action="{{ fsc.url() }}" method="post">
                         <div class="input-group">
                             <input id="queryInput" type="text" name="query" value="{{ fsc.query }}" class="form-input" autocomplete="off" autofocus=""/>
